chore: update Java version to 17 docs: add architecture.md documenting project architecture chore: add custom Logback configuration (logback-spring.xml) feat: integrate Spring Boot Actuator endpoints for monitoring